--- a/index.html
+++ b/index.html
@@ -1,169 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>用户中心中间件列表</title>
-
-    <!-- load stylesheets -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
-    <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/hero-slider-style.css">
-    <!-- Hero slider style (https://codyhouse.co/gem/hero-slider/) -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
-    <link rel="stylesheet" href="css/tooplate-style.css">
-
-</head>
-
+<html>
+<title>Huangchengkang blog</title>
 <body>
-    <div>
-        <ul>
-            <li class="selected">
-                <div>
-                    <div>
-                        <div class="tm-img-gallery-container">
-                            <div>
-                                <div>
-                                    <h1 class="tm-text-title tm-gallery-title tm-white">
-                                        <span class="tm-white"><strong>welcome to VCREDIT</strong></span></h1>
-                                    <p class="tm-text">
-                                        <strong class="tm-white">用户中心中间件列表</strong>
-                                    </p>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://10.139.60.79:8500/ui/dc1/services" target="_blank" class="class_outer">
-                                        <img src="img/consul.jpg" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">consul注册中心</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="https://git.kkcredit.cn/VMP" target="_blank" class="class_outer">
-                                        <img src="img/gitliab.png" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">git项目仓库</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://10.10.32.9:5800/app/kibana#/discover?_g=()&_a=(columns:!(message),index:eb1f22c0-a7bb-11e9-9bbe-9117144547d5,interval:auto,query:(language:lucene,query:''),sort:!('@timestamp',desc))"
-                                        target="_blank" class="class_outer">
-                                        <img src="img/kibana.png" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">kibana日志平台</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://showdoc.vcredit.com/web/#/91?page_id=2753" target="_blank" class="class_outer">
-                                        <img src="img/showdoc.jpg" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">showdoc接口文档</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://10.139.60.82:8899/" target="_blank" class="class_outer">
-                                        <img src="img/elastic.png" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">elastic定时任务控制台</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://10.139.60.83:8081/" target="_blank" class="class_outer">
-                                        <img src="img/maven1.jpg" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">maven私服仓库</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://10.139.60.79:15672/#/exchanges" target="_blank" class="class_outer">
-                                        <img src="img/rabbitmq.jpg" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">rabbitmq控制台</span>
-                                    </a>
-                                </div>
-               
-                                <div class="grid-item">
-                                    <a href="http://10.1.12.114:9123/login/" target="_blank" class="class_outer">
-                                        <img src="img/mysql.jpg" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">sql自动化运维平台</span>
-                                    </a>
-                                </div>
-                                <!-- apollo -->
-                                <div class="grid-item">
-                                    <a href="http://10.139.60.70:8070/index.html" target="_blank" class="class_outer">
-                                        <img src="img/apollo.png" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">apollo文件配置中心</span>
-                                    </a>
-                                </div>
-                                <div class="grid-item">
-                                    <a href="http://mail.vcredit.com/#lang=cn" target="_blank" class="class_outer">
-                                        <img src="img/email.png" alt="Image" class="img-style">
-                                        <span class="class_cover" style=" text-align:center;">维信email网页地址</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div> 
-   <!-- 
-    <div id="loader-wrapper">
-
-        <div id="loader"></div>
-        <div class="loader-section section-left"></div>
-        <div class="loader-section section-right"></div>
-
-    </div> -->
-
-
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <!-- <script src="js/tether.min.js"></script> -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/hero-slider-main.js"></script>          -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
-
-    <script>
-        $(window).load(function () {
-
-
-            /* Gallery One pop up
-            -----------------------------------------*/
-            $('.gallery-one').magnificPopup({
-                delegate: 'a', // child items selector, by clicking on it popup will open
-                type: 'image',
-                gallery: {
-                    enabled: true
-                }
-            });
-
-            /* Gallery Two pop up
-                -----------------------------------------*/
-            $('.gallery-two').magnificPopup({
-                delegate: 'a',
-                type: 'image',
-                gallery: {
-                    enabled: true
-                }
-            });
-
-            /* Gallery Three pop up
-            -----------------------------------------*/
-            $('.gallery-three').magnificPopup({
-                delegate: 'a',
-                type: 'image',
-                gallery: {
-                    enabled: true
-                }
-            });
-
-            $('body').addClass('loaded');
-
-        });
-    </script>
-
+	<p>Welcome to Huangchengkang blog !</p>
 </body>
-
 </html>
